<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <TableLayout
        android:id="@+id/rTable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:id="@+id/table_header"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:background="@color/lightGreen">

            <TextView
                android:id="@+id/purchaseHeader"
                android:layout_width="171dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/product"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/numberHeader"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/number"
                android:textColor="#000"
                android:textSize="20sp" />

        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/purchasesView"
        android:layout_width="373dp"
        android:layout_height="558dp"
        android:layout_margin="20dp"
        android:layout_marginTop="32dp"
        android:divider="@null"
        android:dividerHeight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rTable_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="412dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/productText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Product name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/numberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/number"
            android:inputType="number" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="131dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightGreen"
            android:onClick="okOnClick"
            android:text="@string/ok"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>